force-app/main/default/objects/Maintenance_Staff__c/Maintenance_Staff__c.object-meta.xml
<CustomObject>
    <description>Maintenance Information</description>
    <label>Maintenance Staff</label>
    <nameField>
        <label>Maintenance Staff</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>