force-app/main/default/objects/Maintenance_Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staff_Name__c</columns>
    <columns>Specialization__c</columns>
    <columns>Certification__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>